--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./styles/reset.css">
-        <link rel="stylesheet" href="./styles/style.css">
+        <link rel="stylesheet" href="./reset.css">
+        <link rel="stylesheet" href="./style.css">
         <title>Document</title>
     </head>
 
@@ -35,13 +35,13 @@
         </nav>
 
         <!-- HEADER -->
-        <header id="header-option-2"><img src="./stubs/example-header-option-2.png" alt="placeholder"></header>
+        <header id="header-option-2"><img src="./example-header-option-2.png" alt="placeholder"></header>
 
         <div class="content">
             <!-- MAIN -->
             <main id="main-option-2">
                 <div id="float-left">
-                    <img src="./images/200x200.png" alt=""> <br>
+                    <img src="./200x200.png" alt=""> <br>
                     <cite>
                         Source: <a href="https://via.placeholder.com/200x200">Placeholder Image</a>
                     </cite>
@@ -62,7 +62,7 @@
                     tempore. Sit cum cupiditate est et? Obcaecati libero nulla nisi commodi repellendus amet voluptate repudiandae quisquam 
                     consequuntur, tempora officia ullam fugit aut, quasi beatae, ab tenetur asperiores. Eius temporibus nulla consectetur,
                     repudiandae quod nam, ab praesentium ea, veritatis perspiciatis nisi accusamus ipsa quae. Est aut excepturi ipsa cupiditate
-                    officiis. Unde vel corrupti quidem rem!<br>`                                             Necessitatibus eaque dolorem reprehenderit? Delectus quaerat, tempora fuga
+                    officiis. Unde vel corrupti quidem rem!<br> Necessitatibus eaque dolorem reprehenderit? Delectus quaerat, tempora fuga
                     exercitationem repellat blanditiis cumque nulla porro ratione est quae sequi sint officia molestiae ea aut beatae, at 
                     magnam fugit placeat minima natus ipsam nisi distinctio. Magnam inventore voluptates, deserunt culpa non repellendus
                     dolorem illum repudiandae saepe, aut dolorum facilis itaque quae fugit mollitia, modi quas earum quod?
@@ -81,6 +81,6 @@
             </aside>
         </div>
         <!-- FOOTER -->
-        <footer id="footer-option-2"><img src="./stubs/example-footer-option-2.png" alt="placeholder"></footer>
+        <footer id="footer-option-2"><img src="../example-footer-option-2.png" alt="placeholder"></footer>
     
 </body></html>
